<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juborajsarker.privatemessage.activity.HowItWorksActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ede8e8"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:background="#fff"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="How it works"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:gravity="center"
                        android:padding="5dp"/>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:text="@string/help_serial_1"/>



                    </LinearLayout>

                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:text="@string/help_serial_2"/>



                    </LinearLayout>

                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:paddingBottom="5dp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:text="@string/help_serial_3"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:text="@string/help_serial_4"/>


                    </LinearLayout>

                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:text="@string/help_serial_5"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#fff">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:onClick="email"
                            android:text="@string/help_serial_6"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>



            </LinearLayout>


        </android.support.v7.widget.CardView>






    </ScrollView>





</LinearLayout>
